# UAindustrialAPI

./: README.md
fanuc_experimental/: readme.md  readme.md~
fanuc_experimental/fanuc_lrmate200id_moveit_config/: .setup_assistant  package1.xml
fanuc_experimental/fanuc_lrmate200id_moveit_config/config/: fanuc_lrmate200id.srdf  ompl_planning.yaml
fanuc_experimental/fanuc_lrmate200id_moveit_config/launch/: fanuc_lrmate200id_moveit_controller_manager.launch.xml  fanuc_lrmate200id_moveit_sensor_manager.launch.xml  moveit.rviz  stomp_planning_pipeline.launch  trajectory_execution.launch.xml
fanuc_experimental/fanuc_lrmate200id_support/meshes/lrmate200id/visual/: link_61.stl  link_62.stl  link_66.stl
fanuc_experimental/fanuc_lrmate200id_support/urdf/: lrmate200id.urdf  lrmate200id_macro.xacro
lesson_moveit/: CMakeLists.txt  package.xml  readme.md
lesson_moveit/src/: lesson_moveit.cpp
modelo_cliente_servidor/: CMakeLists.txt  package.xml  readme.md
modelo_cliente_servidor/msg/: Posicao2.msg
modelo_cliente_servidor/src/: Keyboard.cpp  service_client.cpp  service_server.cpp
modelo_cliente_servidor/srv/: Path_Posit.srv
pick_place_demo/: CMakeLists.txt  package.xml  readme.md
pick_place_demo/src/: pick_place_simoes.cpp
publicador_subscritor/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.md  readme.md~
publicador_subscritor/launch/: moving.launch  moving.launch~
publicador_subscritor/msg/: Orientacao.msg  PathPosition.msg  Posicao.msg~
publicador_subscritor/src/: simple_publisher.cpp  simple_publisher.cpp~  simple_subscriber.cpp  simple_subscriber.cpp~
